# C-Coding-Challenge

./: CMakeLists.txt  README.md  main.cc  main.cc.in
API/: ArithmeticExpresionEvaluatorApi.cpp  ArithmeticExpresionEvaluatorApi.hpp  CMakeLists.txt
Components/ExpressionTree/: CMakeLists.txt  ExpressionNode.cpp  ExpressionNode.hpp  IntNode.cpp  IntNode.hpp  Node.hpp  Parser.cpp  Parser.hpp
Components/HttpServer/: CMakeLists.txt  HttpController.cpp  HttpController.hpp  Server.cpp  Server.hpp
